--- a/spotifyAdvancedCSShtml.css
+++ b/spotifyAdvancedCSShtml.css
@@ -4,17 +4,216 @@ html {
     height: 100%;
     width: 100%;
 
-  }
-  *, *:before, *:after {
+}
+
+*,
+*:before,
+*:after {
     box-sizing: inherit;
-  }
+}
 
-.header {
+@font-face {
+    font-family: spotifyinternal-artistnpv-spotify-circular-latin;
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://encore.scdn.co/fonts/CircularSpotify-UI-Latin-Book-ffeb1e7f75131ff615f338c73751b633.woff2) format("woff2"), url(https://encore.scdn.co/fonts/CircularSpotify-UI-Latin-Book-ac71b98add4c5863080462c2e3252022.woff) format("woff")
+}
 
+@font-face {
+    font-family: spotifyinternal-artistnpv-spotify-circular-latin;
+    font-style: normal;
+    font-weight: 700;
+    src: url(https://encore.scdn.co/fonts/CircularSpotify-UI-Latin-Bold-39f75fe74e898cc9ebef1a4e8a6023b5.woff2) format("woff2"), url(https://encore.scdn.co/fonts/CircularSpotify-UI-Latin-Bold-8615f49cf86e86a16ebb9c5565e99743.woff) format("woff")
+}
 
-    border: 1px solid rgb(255, 255, 255);
-    height: 40px;
+@font-face {
+    font-family: spotifyinternal-artistnpv-spotify-circular-latin;
+    font-style: normal;
+    font-weight: 900;
+    src: url(https://encore.scdn.co/fonts/CircularSpotify-UI-Latin-Black-765ca9bf8d2f11afb11dc49884b779ca.woff2) format("woff2"), url(https://encore.scdn.co/fonts/CircularSpotify-UI-Latin-Black-d11d90541e5f15158097018d3634a9e0.woff) format("woff")
+}
+
+@font-face {
+    font-family: spotifyinternal-artistnpv-spotify-circular-cyrillic;
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://encore.scdn.co/fonts/CircularSpotify-UI-Cyrillic-Book-a2d035801f91171a95e1da4355607f88.woff2) format("woff2"), url(https://encore.scdn.co/fonts/CircularSpotify-UI-Cyrillic-Book-4458a2f11a26f9778b5c1a1719bf688f.woff) format("woff");
+    unicode-range: U+04??
+}
+
+@font-face {
+    font-family: spotifyinternal-artistnpv-spotify-circular-cyrillic;
+    font-style: normal;
+    font-weight: 700;
+    src: url(https://encore.scdn.co/fonts/CircularSpotify-UI-Cyrillic-Bold-56e0fc88fd266fe9d5e323df8e190a97.woff2) format("woff2"), url(https://encore.scdn.co/fonts/CircularSpotify-UI-Cyrillic-Bold-d3b578139d28c5ab8cef8811a8ec521c.woff) format("woff");
+    unicode-range: U+04??
+}
+
+@font-face {
+    font-family: spotifyinternal-artistnpv-spotify-circular-cyrillic;
+    font-style: normal;
+    font-weight: 900;
+    src: url(https://encore.scdn.co/fonts/CircularSpotify-UI-Cyrillic-Black-05ec87a84eecb2c7e3df0deedd7e0163.woff2) format("woff2"), url(https://encore.scdn.co/fonts/CircularSpotify-UI-Cyrillic-Black-84bb9e740e12139b1a7b1acaa294aa5e.woff) format("woff");
+    unicode-range: U+04??
+}
+
+@font-face {
+    font-family: spotifyinternal-artistnpv-spotify-circular-arabic;
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://encore.scdn.co/fonts/CircularSpotify-UI-Arabic-Book-590e30595e03caba45b26307fd28be68.woff2) format("woff2"), url(https://encore.scdn.co/fonts/CircularSpotify-UI-Arabic-Book-d370787b82e945776b4067b43b72e05d.woff) format("woff");
+    unicode-range: U+06??
+}
+
+@font-face {
+    font-family: spotifyinternal-artistnpv-spotify-circular-arabic;
+    font-style: normal;
+    font-weight: 700;
+    src: url(https://encore.scdn.co/fonts/CircularSpotify-UI-Arabic-Bold-aa4c5c76dea408a4e7a673ae5188e8b5.woff2) format("woff2"), url(https://encore.scdn.co/fonts/CircularSpotify-UI-Arabic-Bold-45f58735fe46b3f972c5b787e0ca4745.woff) format("woff");
+    unicode-range: U+06??
+}
+
+@font-face {
+    font-family: spotifyinternal-artistnpv-spotify-circular-arabic;
+    font-style: normal;
+    font-weight: 900;
+    src: url(https://encore.scdn.co/fonts/CircularSpotify-UI-Arabic-Black-16fd768ee89c1a145b9eaadb228ece5a.woff2) format("woff2"), url(https://encore.scdn.co/fonts/CircularSpotify-UI-Arabic-Black-a9126697756e0b9bf8d984da997d304c.woff) format("woff");
+    unicode-range: U+06??
+}
+
+@font-face {
+    font-family: spotifyinternal-artistnpv-spotify-circular-hebrew;
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://encore.scdn.co/fonts/CircularSpotify-UI-Hebrew-Book-fdbfe6ba6f193d7002641edd5ba8d1bb.woff2) format("woff2"), url(https://encore.scdn.co/fonts/CircularSpotify-UI-Hebrew-Book-bc62f5e29c81fe798fd550ce66ec614b.woff) format("woff");
+    unicode-range: U+0590-05ff
+}
+
+@font-face {
+    font-family: spotifyinternal-artistnpv-spotify-circular-hebrew;
+    font-style: normal;
+    font-weight: 700;
+    src: url(https://encore.scdn.co/fonts/CircularSpotify-UI-Hebrew-Bold-66ffc49634f84667dfeeba901fce6e14.woff2) format("woff2"), url(https://encore.scdn.co/fonts/CircularSpotify-UI-Hebrew-Bold-0fbb731e50d7a124246e82baf269b51f.woff) format("woff");
+    unicode-range: U+0590-05ff
+}
+
+@font-face {
+    font-family: spotifyinternal-artistnpv-spotify-circular-hebrew;
+    font-style: normal;
+    font-weight: 900;
+    src: url(https://encore.scdn.co/fonts/CircularSpotify-UI-Hebrew-Black-bdc35ee2a02aedc06c6183d9bba64d0d.woff2) format("woff2"), url(https://encore.scdn.co/fonts/CircularSpotify-UI-Hebrew-Black-b79393fd9daf143d284c162732983f79.woff) format("woff");
+    unicode-range: U+0590-05ff
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    font-family: 'spotify-circular', 'spotify-circular-cyrillic', 'spotify-circular-arabic', 'spotify-circular-hebrew', 'Helvetica Neue', Helvetica, Arial, 'Hiragino Kaku Gothic Pro', 'Meiryo', 'MS Gothic', sans-serif;
+
+}
+
+.main-container {
+    background-color: aqua;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.albumInfoContainer{
+    display: flex;
+    padding: 136px 32px 32px 24px;
+    height: 100vh;
     width: calc(100% - 12px);
+    background-color: #121212;
+}
+.images{
+    max-width: 100%;
+    max-height: 100%;
+}
+.albumPicture{
+    width: 136px;
+    height: 136px;
+}
+.unused{
+    width : 100%;
+    height: 64px;
     position: fixed;
+    background-color: antiquewhite;
+
+}
+.artistName{
+    width : 100%;
+    height: 40px;
+    top: 66px;
+    position: fixed;
+    background-color: #121212;
+    font-family: spotifyinternal-artistnpv-spotify-circular-latin;   
+    color:  #FFF;
+    font-size: 24px;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    padding: 0px 8px;
+    letter-spacing: -0.04em;
     
+}
+.albumInfo{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 24px;
+    gap: 8px;
+}
+
+.albumInfo > a{
+    text-decoration: none;
+    letter-spacing: -0.04em;
+    margin-top: 2px;
+    color:  #FFF;
+    font-weight: 700;
+    font-size: 32px;
+    text-transform: none;
+    height: 36px;
+    display: flex;
+    align-items: center;
+
+}
+.albumInfo span {
+    font-weight: 400;
+    font-size: 14px;
+    letter-spacing: normal;
+    line-height: 16px;
+    width: 40px;
+    color:  #B3B3B3;
+    font-family: spotifyinternal-artistnpv-spotify-circular-latin;
+}
+
+.albumButtons{
+    display: flex;
+    flex-direction: row;
+    height: 32px;
+    gap: 12px;
+    margin-top: 31px;
+}
+.albumButtons button {
+    display: flex;
+    background-color: #FFF;
+    border-radius: 50px;
+    width: 32px;
+    height: 32px;
+    border: none;
+    align-items: center;
+    justify-content: center;
+}
+.albumButtons > div {
+    display: flex;
+    margin: 0;
+    width: 32px;
+    height: 32px;
+    border: none;
+    align-items: center;
+    justify-content: center;
+    color: #B3B3B3;
+    fill: currentcolor;
 }
