--- a/spotifyAdvancedCSShtml.css
+++ b/spotifyAdvancedCSShtml.css
@@ -1,15 +1,10 @@
-html {
+* {
     box-sizing: border-box;
-    background-color: #121212;
-    height: 100%;
-    width: 100%;
-
-}
-
-*,
-*:before,
-*:after {
-    box-sizing: inherit;
+    background-color: black;
+    color: white;
+    margin: 0;
+    padding: 0;
+    font-family: spotifyinternal-artistnpv-spotify-circular-latin;
 }
 
 @font-face {
@@ -18,21 +13,18 @@ html {
     font-weight: 400;
     src: url(https://encore.scdn.co/fonts/CircularSpotify-UI-Latin-Book-ffeb1e7f75131ff615f338c73751b633.woff2) format("woff2"), url(https://encore.scdn.co/fonts/CircularSpotify-UI-Latin-Book-ac71b98add4c5863080462c2e3252022.woff) format("woff")
 }
-
 @font-face {
     font-family: spotifyinternal-artistnpv-spotify-circular-latin;
     font-style: normal;
     font-weight: 700;
     src: url(https://encore.scdn.co/fonts/CircularSpotify-UI-Latin-Bold-39f75fe74e898cc9ebef1a4e8a6023b5.woff2) format("woff2"), url(https://encore.scdn.co/fonts/CircularSpotify-UI-Latin-Bold-8615f49cf86e86a16ebb9c5565e99743.woff) format("woff")
 }
-
 @font-face {
     font-family: spotifyinternal-artistnpv-spotify-circular-latin;
     font-style: normal;
     font-weight: 900;
     src: url(https://encore.scdn.co/fonts/CircularSpotify-UI-Latin-Black-765ca9bf8d2f11afb11dc49884b779ca.woff2) format("woff2"), url(https://encore.scdn.co/fonts/CircularSpotify-UI-Latin-Black-d11d90541e5f15158097018d3634a9e0.woff) format("woff")
 }
-
 @font-face {
     font-family: spotifyinternal-artistnpv-spotify-circular-cyrillic;
     font-style: normal;
@@ -40,7 +32,6 @@ html {
     src: url(https://encore.scdn.co/fonts/CircularSpotify-UI-Cyrillic-Book-a2d035801f91171a95e1da4355607f88.woff2) format("woff2"), url(https://encore.scdn.co/fonts/CircularSpotify-UI-Cyrillic-Book-4458a2f11a26f9778b5c1a1719bf688f.woff) format("woff");
     unicode-range: U+04??
 }
-
 @font-face {
     font-family: spotifyinternal-artistnpv-spotify-circular-cyrillic;
     font-style: normal;
@@ -48,7 +39,6 @@ html {
     src: url(https://encore.scdn.co/fonts/CircularSpotify-UI-Cyrillic-Bold-56e0fc88fd266fe9d5e323df8e190a97.woff2) format("woff2"), url(https://encore.scdn.co/fonts/CircularSpotify-UI-Cyrillic-Bold-d3b578139d28c5ab8cef8811a8ec521c.woff) format("woff");
     unicode-range: U+04??
 }
-
 @font-face {
     font-family: spotifyinternal-artistnpv-spotify-circular-cyrillic;
     font-style: normal;
@@ -56,7 +46,6 @@ html {
     src: url(https://encore.scdn.co/fonts/CircularSpotify-UI-Cyrillic-Black-05ec87a84eecb2c7e3df0deedd7e0163.woff2) format("woff2"), url(https://encore.scdn.co/fonts/CircularSpotify-UI-Cyrillic-Black-84bb9e740e12139b1a7b1acaa294aa5e.woff) format("woff");
     unicode-range: U+04??
 }
-
 @font-face {
     font-family: spotifyinternal-artistnpv-spotify-circular-arabic;
     font-style: normal;
@@ -64,7 +53,6 @@ html {
     src: url(https://encore.scdn.co/fonts/CircularSpotify-UI-Arabic-Book-590e30595e03caba45b26307fd28be68.woff2) format("woff2"), url(https://encore.scdn.co/fonts/CircularSpotify-UI-Arabic-Book-d370787b82e945776b4067b43b72e05d.woff) format("woff");
     unicode-range: U+06??
 }
-
 @font-face {
     font-family: spotifyinternal-artistnpv-spotify-circular-arabic;
     font-style: normal;
@@ -72,7 +60,6 @@ html {
     src: url(https://encore.scdn.co/fonts/CircularSpotify-UI-Arabic-Bold-aa4c5c76dea408a4e7a673ae5188e8b5.woff2) format("woff2"), url(https://encore.scdn.co/fonts/CircularSpotify-UI-Arabic-Bold-45f58735fe46b3f972c5b787e0ca4745.woff) format("woff");
     unicode-range: U+06??
 }
-
 @font-face {
     font-family: spotifyinternal-artistnpv-spotify-circular-arabic;
     font-style: normal;
@@ -80,7 +67,6 @@ html {
     src: url(https://encore.scdn.co/fonts/CircularSpotify-UI-Arabic-Black-16fd768ee89c1a145b9eaadb228ece5a.woff2) format("woff2"), url(https://encore.scdn.co/fonts/CircularSpotify-UI-Arabic-Black-a9126697756e0b9bf8d984da997d304c.woff) format("woff");
     unicode-range: U+06??
 }
-
 @font-face {
     font-family: spotifyinternal-artistnpv-spotify-circular-hebrew;
     font-style: normal;
@@ -88,7 +74,6 @@ html {
     src: url(https://encore.scdn.co/fonts/CircularSpotify-UI-Hebrew-Book-fdbfe6ba6f193d7002641edd5ba8d1bb.woff2) format("woff2"), url(https://encore.scdn.co/fonts/CircularSpotify-UI-Hebrew-Book-bc62f5e29c81fe798fd550ce66ec614b.woff) format("woff");
     unicode-range: U+0590-05ff
 }
-
 @font-face {
     font-family: spotifyinternal-artistnpv-spotify-circular-hebrew;
     font-style: normal;
@@ -96,7 +81,6 @@ html {
     src: url(https://encore.scdn.co/fonts/CircularSpotify-UI-Hebrew-Bold-66ffc49634f84667dfeeba901fce6e14.woff2) format("woff2"), url(https://encore.scdn.co/fonts/CircularSpotify-UI-Hebrew-Bold-0fbb731e50d7a124246e82baf269b51f.woff) format("woff");
     unicode-range: U+0590-05ff
 }
-
 @font-face {
     font-family: spotifyinternal-artistnpv-spotify-circular-hebrew;
     font-style: normal;
@@ -105,115 +89,62 @@ html {
     unicode-range: U+0590-05ff
 }
 
-body {
-    display: flex;
-    flex-direction: column;
-    font-family: 'spotify-circular', 'spotify-circular-cyrillic', 'spotify-circular-arabic', 'spotify-circular-hebrew', 'Helvetica Neue', Helvetica, Arial, 'Hiragino Kaku Gothic Pro', 'Meiryo', 'MS Gothic', sans-serif;
+.mainContainer{
+    display: grid;
+    height: 100vh;
+    grid-template-columns: 241px 1fr;
+    grid-auto-rows: 64px 40px 136px 1fr 90px;
+    grid-template-areas: 
+                        "navigation header"
+                        "navigation artistName"
+                        "navigation albumInfo"
+                        "navigation discography"
+                        "player player";
+    overflow-y: hidden;
+    align-content: space-around;
 
 }
 
-.main-container {
-    background-color: aqua;
-    height: 100vh;
+.navigation{
+    grid-area: navigation;
     width: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
-.albumInfoContainer{
-    display: flex;
-    padding: 136px 32px 32px 24px;
     height: 100vh;
-    width: calc(100% - 12px);
+    background-color: black;
+    overflow-y: hidden;
+}
+.header{
+    grid-area: header;
+    width: 100%;
+    height: 100%;
     background-color: #121212;
-}
-.images{
-    max-width: 100%;
-    max-height: 100%;
-}
-.albumPicture{
-    width: 136px;
-    height: 136px;
-}
-.unused{
-    width : 100%;
-    height: 64px;
-    position: fixed;
-    background-color: antiquewhite;
-
+    overflow-y: hidden;
 }
 .artistName{
-    width : 100%;
-    height: 40px;
-    top: 66px;
-    position: fixed;
+    grid-area: artistName;
+    width: 100%;
+    height: 100%;
     background-color: #121212;
-    font-family: spotifyinternal-artistnpv-spotify-circular-latin;   
-    color:  #FFF;
-    font-size: 24px;
-    font-weight: 700;
-    display: flex;
-    align-items: center;
-    padding: 0px 8px;
-    letter-spacing: -0.04em;
-    
+    overflow-y: hidden;
 }
 .albumInfo{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding-left: 24px;
-    gap: 8px;
+    grid-area: albumInfo;
+    width: 100%;
+    height: 100%;
+    background-color: #121212;
+    overflow-y: hidden;
+}
+.discography{
+    grid-area: discography;
+    width: 100%;
+    height: 100%;
+    background-color: #121212;
+    overflow-y: scroll;
 }
 
-.albumInfo > a{
-    text-decoration: none;
-    letter-spacing: -0.04em;
-    margin-top: 2px;
-    color:  #FFF;
-    font-weight: 700;
-    font-size: 32px;
-    text-transform: none;
-    height: 36px;
-    display: flex;
-    align-items: center;
-
-}
-.albumInfo span {
-    font-weight: 400;
-    font-size: 14px;
-    letter-spacing: normal;
-    line-height: 16px;
-    width: 40px;
-    color:  #B3B3B3;
-    font-family: spotifyinternal-artistnpv-spotify-circular-latin;
-}
-
-.albumButtons{
-    display: flex;
-    flex-direction: row;
-    height: 32px;
-    gap: 12px;
-    margin-top: 31px;
-}
-.albumButtons button {
-    display: flex;
-    background-color: #FFF;
-    border-radius: 50px;
-    width: 32px;
-    height: 32px;
-    border: none;
-    align-items: center;
-    justify-content: center;
-}
-.albumButtons > div {
-    display: flex;
-    margin: 0;
-    width: 32px;
-    height: 32px;
-    border: none;
-    align-items: center;
-    justify-content: center;
-    color: #B3B3B3;
-    fill: currentcolor;
+.player{
+    grid-area: player;
+    width: 100%;
+    height: 100%;
+    background-color: #121212;
+    overflow-y: hidden;
 }
