--- a/spotifyAdvancedCSShtml.css
+++ b/spotifyAdvancedCSShtml.css
@@ -91,7 +91,7 @@
 
 .mainContainer{
     display: grid;
-    height: 100vh;
+    max-height: 100vh;
     grid-template-columns: 241px 1fr;
     grid-auto-rows: 64px 40px 136px 1fr 90px;
     grid-template-areas: 
@@ -100,15 +100,12 @@
                         "navigation albumInfo"
                         "navigation discography"
                         "player player";
-    overflow-y: hidden;
-    align-content: space-around;
 
 }
 
 .navigation{
     grid-area: navigation;
     width: 100%;
-    height: 100vh;
     background-color: black;
     overflow-y: hidden;
 }
@@ -118,6 +115,9 @@
     height: 100%;
     background-color: #121212;
     overflow-y: hidden;
+    display: flex;
+    padding: 16px;
+    
 }
 .artistName{
     grid-area: artistName;
@@ -125,6 +125,9 @@
     height: 100%;
     background-color: #121212;
     overflow-y: hidden;
+    padding: 0px 16px;
+    display: flex;
+    align-items: center;
 }
 .albumInfo{
     grid-area: albumInfo;
