--- a/spotifyAdvancedCSS-Discography.css
+++ b/spotifyAdvancedCSS-Discography.css
@@ -1,4 +1,4 @@
-.discography{
+/* .discography{
     grid-area: discography;
     max-width: 100%;
     max-height: 100%;
@@ -59,7 +59,6 @@
     color: white;
     font-size: 16px;
     margin-top: 36px;
-
 } 
 
 .songName > span:nth-child(2){
@@ -74,4 +73,4 @@
     margin-top: 32px;
     letter-spacing: 1.2px;
     line-height: 16px
-}
+} */
