--- a/spotifyAdvancedCSS-albumInfo.css
+++ b/spotifyAdvancedCSS-albumInfo.css
@@ -1,4 +1,4 @@
-.albumPic{
+/* .albumPic{
     width: 136px;
     height: 136px;
 }
@@ -86,4 +86,4 @@
     margin-top: 43px;
     display: flex;
     gap: 12px
-}
+} */
