--- a/spotifyAdvancedCSShtml.css
+++ b/spotifyAdvancedCSShtml.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     box-sizing: border-box;
 
     color: white;
@@ -92,11 +92,10 @@
 .mainContainer{
     display: grid;
     grid-template-columns: 241px 1fr;
-    grid-auto-rows: 64px 40px 200px 1fr 90px;
+    grid-auto-rows: 64px 40px 1fr 90px;
     grid-template-areas: 
                         "navigation header"
                         "navigation artistName"
-                        "navigation albumInfo"
                         "navigation discography"
                         "player player";
     height: 100vh;
@@ -139,15 +138,24 @@
     align-items: center;
 }
 .albums{
-    grid-area: albumInfo;
+    grid-area: discography;
     display: flex;
     flex: 1;
     max-width: 100%;
     max-height: 100%;
     background-color: #121212;
-    overflow-y: hidden;
+    overflow-y: scroll;
     padding: 40px 16px 32px 32px;  
 
+}
+.discography{
+    grid-area: discography;
+    max-width: 100%;
+    max-height: 100%;
+    background-color: #121212;
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
 }
 
 .player{
@@ -157,4 +165,4 @@
     background-color: #121212;
     overflow-y: hidden;
     border: 1px solid #282828;
-}
+} */
