add style on playing songs

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 * {
     box-sizing: border-box;
-    color: white;
     margin: 0;
     padding: 0;
     font-family: spotifyinternal-artistnpv-spotify-circular-latin;
@@ -283,6 +282,14 @@
     margin-left: 2px;
 
 }
+.songsListContainer:hover{
+    background-color: rgba(255,255,255,.1);
+    color: white
+}
+
+.songsListContainer:hover .songName span:nth-child(2){
+    color: white
+}
 
 .songsListContainer>span:nth-child(1) {
     font-size: 16px;
@@ -290,6 +297,15 @@
     margin-left: px;
     margin-top: -3px;
 
+}
+.songsListContainer .playIcon{
+    display: none;
+}
+.songsListContainer:hover .playIcon{
+    display: block;
+}
+.songsListContainer:hover .songNumber{
+    display: none;
 }
 
 .fakeNav {
@@ -410,3 +426,7 @@
     height: 4px;
     background-color: hsla(0,0%,100%,0.3);
 }
+
+.songsListContainer.playing .songName{
+    color: green;
+}   
